# mobil_os

./: .clodeignore  .gitignore  KULLANIM_KILAVUZU.md  LICENSE  Makefile  README.md  cloude.md  install.md  progress.md  surum.md
apps/: Makefile
apps/dialer/: Makefile
apps/launcher/: Makefile
apps/settings/: Makefile
board/qemu-arm64/: board.mk  defconfig
core/: Makefile
core/init/: Makefile  init.rc
docs/: architecture.md  degerlendime.md  eksik.md  ipc.md  services.md  wayland-migration.md  wayland-migration_eksik.md
libs/: Makefile
libs/libgraphics/: Makefile
libs/libi18n/: Makefile
libs/libipc/: Makefile
libs/libipc-rs/: Cargo.toml  Makefile
orion_package_kit/: Cargo.toml  Makefile  README.md  cloude.md  gen_pkg.py  mimari.md  progress.md  sürüm.md  test_app.opk
orion_package_kit/mcpkg-core/: Cargo.toml
orion_package_kit/mcpkg-sandbox/: Cargo.toml
orion_package_kit/mcpkg-sandbox/src/: apparmor.rs  lib.rs  namespace.rs  seccomp.rs
paket_yönetimi/: LICENSE  Makefile  kullanim_kilavuzu.md
paket_yönetimi/mcpkg-cli/: Cargo.toml
paket_yönetimi/mcpkg-cli/src/: main.rs
paket_yönetimi/mcpkg-crypto/: Cargo.toml
paket_yönetimi/mcpkg-pipeline/: Cargo.toml
rootfs/: Makefile
rootfs/base/: Makefile
scripts/: build.sh  check-deps.sh  download-kernel.sh  make-rootfs.sh  qemu-run.sh  update-deps.sh
scripts/lib/: deps-yaml.sh
services/: Makefile
services/apigateway/: Cargo.toml  Makefile
services/apprunner/: Cargo.toml  Makefile
services/inputflinger/: Cargo.toml  Makefile
ui/: Makefile  icons.c  icons.h  theme.h
(+102 files in other folders)
