[package]
name = "mcpkg-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { version = "0.27", features = ["mount", "user", "sched"] }
serde = { version = "1.0", features = ["derive"] }
mcpkg-core = { path = "../mcpkg-core" }
libseccomp = { version = "0.4.0", optional = true }

[features]
default = []
seccomp = ["dep:libseccomp"]
