[package]
name = "opk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
mcpkg-core = { path = "../mcpkg-core" }
mcpkg-crypto = { path = "../mcpkg-crypto" }
mcpkg-sandbox = { path = "../mcpkg-sandbox" }
mcpkg-pipeline = { path = "../mcpkg-pipeline" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
